--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,9 +73,9 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_gravity="center"
             android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp" />
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center" />
     </FrameLayout>
 
 
@@ -89,8 +89,8 @@
         android:backgroundTint="@color/primary"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_add"
-        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
