--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#1C2E46</color>
-    <color name="primary_dark">#142232</color>
+    <color name="primary">#7152C9</color>
+    <color name="primary_dark">#6547BC</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFF</color>
@@ -9,5 +9,6 @@
     <color name="icon_background">#20FFFFFF</color>
     <color name="error">#B00020</color>
     <color name="online">#73CA1D</color>
-    <color name="received_message_background">#090D16</color>
+    <color name="received_message_background">#EBEBEB</color>
+    <color name="black">#252525</color>
 </resources>
